--- a/libuthread/Makefile
+++ b/libuthread/Makefile
@@ -1,5 +1,7 @@
 # Target library
 lib := libuthread.a
+o_file :=  uthread.o context.o queue.o preempt.o
+
 CC  := gcc
 CFLAGS := -Wall -Wextra -Werror
 DEPFLAGS = -MMD -MF $(@:.o=.d)
@@ -9,7 +11,7 @@ all: $(lib)
 
 ## TODO: Phase 1.1
 
-$(lib): uthread.o context.o queue.o preempt.o
+$(lib): $(o_file)
 	ar rcs $@ $<
 	ranlib $@
 
@@ -17,4 +19,4 @@ $(lib): uthread.o context.o queue.o preempt.o
 	$(CC) $(CFLAGS) -c -o $@ $< $(DEPFLAGS)
 
 clean:
-	rm -f $(lib) *.o
+	rm -f $(lib) $(o_file)
